LinqToQuerystring/LinqToQuerystringParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.0.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.0.2 E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g 2015-12-21 10:31:17

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  LinqToQuerystring 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.0.2")]
[System.CLSCompliant(false)]
public partial class LinqToQuerystringParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS", "ALL", "ALLPAGES", "AND", "ANY", "ASC", "ASSIGN", "AVERAGE", "BOOL", "BYTE", "COUNT", "DATETIME", "DAY", "DAYS", "DECIMAL", "DESC", "DOUBLE", "DYNAMICIDENTIFIER", "ENDSWITH", "EQUALS", "ESC_SEQ", "EXPAND", "FILTER", "GREATERTHAN", "GREATERTHANOREQUAL", "GUID", "HEX_DIGIT", "HEX_PAIR", "HOUR", "HOURS", "IDENTIFIER", "IGNORED", "INLINECOUNT", "INT", "LESSTHAN", "LESSTHANOREQUAL", "LONG", "MAX", "MIN", "MINUTE", "MINUTES", "MONTH", "NEWLINE", "NONE", "NOT", "NOTEQUALS", "NULL", "OCTAL_ESC", "OR", "ORDERBY", "SECOND", "SECONDS", "SELECT", "SINGLE", "SKIP", "SPACE", "STARTSWITH", "STRING", "SUBSTRINGOF", "SUM", "TOLOWER", "TOP", "TOUPPER", "UNICODE_ESC", "YEAR", "YEARS", "'&'", "'('", "')'", "','", "'/'", "':'"
	};
	public const int EOF=-1;
	public const int ALIAS=4;
	public const int ALL=5;
	public const int ALLPAGES=6;
	public const int AND=7;
	public const int ANY=8;
	public const int ASC=9;
	public const int ASSIGN=10;
	public const int AVERAGE=11;
	public const int BOOL=12;
	public const int BYTE=13;
	public const int COUNT=14;
	public const int DATETIME=15;
	public const int DAY=16;
	public const int DAYS=17;
	public const int DECIMAL=18;
	public const int DESC=19;
	public const int DOUBLE=20;
	public const int DYNAMICIDENTIFIER=21;
	public const int ENDSWITH=22;
	public const int EQUALS=23;
	public const int ESC_SEQ=24;
	public const int EXPAND=25;
	public const int FILTER=26;
	public const int GREATERTHAN=27;
	public const int GREATERTHANOREQUAL=28;
	public const int GUID=29;
	public const int HEX_DIGIT=30;
	public const int HEX_PAIR=31;
	public const int HOUR=32;
	public const int HOURS=33;
	public const int IDENTIFIER=34;
	public const int IGNORED=35;
	public const int INLINECOUNT=36;
	public const int INT=37;
	public const int LESSTHAN=38;
	public const int LESSTHANOREQUAL=39;
	public const int LONG=40;
	public const int MAX=41;
	public const int MIN=42;
	public const int MINUTE=43;
	public const int MINUTES=44;
	public const int MONTH=45;
	public const int NEWLINE=46;
	public const int NONE=47;
	public const int NOT=48;
	public const int NOTEQUALS=49;
	public const int NULL=50;
	public const int OCTAL_ESC=51;
	public const int OR=52;
	public const int ORDERBY=53;
	public const int SECOND=54;
	public const int SECONDS=55;
	public const int SELECT=56;
	public const int SINGLE=57;
	public const int SKIP=58;
	public const int SPACE=59;
	public const int STARTSWITH=60;
	public const int STRING=61;
	public const int SUBSTRINGOF=62;
	public const int SUM=63;
	public const int TOLOWER=64;
	public const int TOP=65;
	public const int TOUPPER=66;
	public const int UNICODE_ESC=67;
	public const int YEAR=68;
	public const int YEARS=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int T__75=75;

	public LinqToQuerystringParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public LinqToQuerystringParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return LinqToQuerystringParser.tokenNames; } }
	public override string GrammarFileName { get { return "E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_prog();
	partial void LeaveRule_prog();
	// $ANTLR start "prog"
	// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:33:8: public prog : ( param ( '&' ! param )* )* ;
	[GrammarRule("prog")]
	public AstParserRuleReturnScope<object, IToken> prog()
	{
		EnterRule_prog();
		EnterRule("prog", 1);
		TraceIn("prog", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken char_literal2 = default(IToken);
		AstParserRuleReturnScope<object, IToken> param1 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> param3 = default(AstParserRuleReturnScope<object, IToken>);

		object char_literal2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "prog");
		DebugLocation(33, 25);
		try
		{
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:34:2: ( ( param ( '&' ! param )* )* )
			DebugEnterAlt(1);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:34:4: ( param ( '&' ! param )* )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(34, 4);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:34:4: ( param ( '&' ! param )* )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_1 = input.LA(1);

				if (((LA2_1>=EXPAND && LA2_1<=FILTER)||(LA2_1>=IGNORED && LA2_1<=INLINECOUNT)||LA2_1==ORDERBY||LA2_1==SELECT||LA2_1==SKIP||LA2_1==TOP))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:34:5: param ( '&' ! param )*
					{
					DebugLocation(34, 5);
					PushFollow(Follow._param_in_prog76);
					param1=param();
					PopFollow();

					adaptor.AddChild(root_0, param1.Tree);
					DebugLocation(34, 11);
					// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:34:11: ( '&' ! param )*
					try { DebugEnterSubRule(1);
					while (true)
					{
						int alt1=2;
						try { DebugEnterDecision(1, false);
						int LA1_1 = input.LA(1);

						if ((LA1_1==70))
						{
							alt1 = 1;
						}


						} finally { DebugExitDecision(1); }
						switch ( alt1 )
						{
						case 1:
							DebugEnterAlt(1);
							// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:34:12: '&' ! param
							{
							DebugLocation(34, 15);
							char_literal2=(IToken)Match(input,70,Follow._70_in_prog79); 
							DebugLocation(34, 17);
							PushFollow(Follow._param_in_prog82);
							param3=param();
							PopFollow();

							adaptor.AddChild(root_0, param3.Tree);

							}
							break;

						default:
							goto loop1;
						}
					}

					loop1:
						;

					} finally { DebugExitSubRule(1); }


					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("prog", 1);
			LeaveRule("prog", 1);
			LeaveRule_prog();
		}
		DebugLocation(34, 25);
		} finally { DebugExitRule(GrammarFileName, "prog"); }
		return retval;

	}
	// $ANTLR end "prog"

	partial void EnterRule_param();
	partial void LeaveRule_param();
	// $ANTLR start "param"
	// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:1: param : ( orderby | top | skip | filter | select | inlinecount | expand | ignored ) ;
	[GrammarRule("param")]
	private AstParserRuleReturnScope<object, IToken> param()
	{
		EnterRule_param();
		EnterRule("param", 2);
		TraceIn("param", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		AstParserRuleReturnScope<object, IToken> orderby4 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> top5 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> skip6 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> filter7 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> select8 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> inlinecount9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expand10 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> ignored11 = default(AstParserRuleReturnScope<object, IToken>);

		try { DebugEnterRule(GrammarFileName, "param");
		DebugLocation(36, 81);
		try
		{
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:7: ( ( orderby | top | skip | filter | select | inlinecount | expand | ignored ) )
			DebugEnterAlt(1);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:9: ( orderby | top | skip | filter | select | inlinecount | expand | ignored )
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(36, 9);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:9: ( orderby | top | skip | filter | select | inlinecount | expand | ignored )
			int alt3=8;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			switch (input.LA(1))
			{
			case ORDERBY:
				{
				alt3 = 1;
				}
				break;
			case TOP:
				{
				alt3 = 2;
				}
				break;
			case SKIP:
				{
				alt3 = 3;
				}
				break;
			case FILTER:
				{
				alt3 = 4;
				}
				break;
			case SELECT:
				{
				alt3 = 5;
				}
				break;
			case INLINECOUNT:
				{
				alt3 = 6;
				}
				break;
			case EXPAND:
				{
				alt3 = 7;
				}
				break;
			case IGNORED:
				{
				alt3 = 8;
				}
				break;
			default:
				{
					NoViableAltException nvae = new NoViableAltException("", 3, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:10: orderby
				{
				DebugLocation(36, 10);
				PushFollow(Follow._orderby_in_param95);
				orderby4=orderby();
				PopFollow();

				adaptor.AddChild(root_0, orderby4.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:20: top
				{
				DebugLocation(36, 20);
				PushFollow(Follow._top_in_param99);
				top5=top();
				PopFollow();

				adaptor.AddChild(root_0, top5.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:26: skip
				{
				DebugLocation(36, 26);
				PushFollow(Follow._skip_in_param103);
				skip6=skip();
				PopFollow();

				adaptor.AddChild(root_0, skip6.Tree);

				}
				break;
			case 4:
				DebugEnterAlt(4);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:33: filter
				{
				DebugLocation(36, 33);
				PushFollow(Follow._filter_in_param107);
				filter7=filter();
				PopFollow();

				adaptor.AddChild(root_0, filter7.Tree);

				}
				break;
			case 5:
				DebugEnterAlt(5);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:42: select
				{
				DebugLocation(36, 42);
				PushFollow(Follow._select_in_param111);
				select8=select();
				PopFollow();

				adaptor.AddChild(root_0, select8.Tree);

				}
				break;
			case 6:
				DebugEnterAlt(6);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:51: inlinecount
				{
				DebugLocation(36, 51);
				PushFollow(Follow._inlinecount_in_param115);
				inlinecount9=inlinecount();
				PopFollow();

				adaptor.AddChild(root_0, inlinecount9.Tree);

				}
				break;
			case 7:
				DebugEnterAlt(7);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:65: expand
				{
				DebugLocation(36, 65);
				PushFollow(Follow._expand_in_param119);
				expand10=expand();
				PopFollow();

				adaptor.AddChild(root_0, expand10.Tree);

				}
				break;
			case 8:
				DebugEnterAlt(8);
				// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:36:74: ignored
				{
				DebugLocation(36, 74);
				PushFollow(Follow._ignored_in_param123);
				ignored11=ignored();
				PopFollow();

				adaptor.AddChild(root_0, ignored11.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("param", 2);
			LeaveRule("param", 2);
			LeaveRule_param();
		}
		DebugLocation(36, 81);
		} finally { DebugExitRule(GrammarFileName, "param"); }
		return retval;

	}
	// $ANTLR end "param"

	partial void EnterRule_skip();
	partial void LeaveRule_skip();
	// $ANTLR start "skip"
	// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:38:1: skip : SKIP ^ ( INT )+ ;
	[GrammarRule("skip")]
	private AstParserRuleReturnScope<object, IToken> skip()
	{
		EnterRule_skip();
		EnterRule("skip", 3);
		TraceIn("skip", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken SKIP12 = default(IToken);
		IToken INT13 = default(IToken);

		object SKIP12_tree = default(object);
		object INT13_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "skip");
		DebugLocation(38, 13);
		try
		{
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:39:2: ( SKIP ^ ( INT )+ )
			DebugEnterAlt(1);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:39:4: SKIP ^ ( INT )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(39, 8);
			SKIP12=(IToken)Match(input,SKIP,Follow._SKIP_in_skip134); 
			SKIP12_tree = (object)adaptor.Create(SKIP12);
			root_0 = (object)adaptor.BecomeRoot(SKIP12_tree, root_0);
			DebugLocation(39, 10);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:39:10: ( INT )+
			int cnt4=0;
			try { DebugEnterSubRule(4);
			while (true)
			{
				int alt4=2;
				try { DebugEnterDecision(4, false);
				int LA4_1 = input.LA(1);

				if ((LA4_1==INT))
				{
					alt4 = 1;
				}


				} finally { DebugExitDecision(4); }
				switch (alt4)
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:39:10: INT
					{
					DebugLocation(39, 10);
					INT13=(IToken)Match(input,INT,Follow._INT_in_skip137); 
					INT13_tree = (object)adaptor.Create(INT13);
					adaptor.AddChild(root_0, INT13_tree);

					}
					break;

				default:
					if (cnt4 >= 1)
						goto loop4;

					EarlyExitException eee4 = new EarlyExitException( 4, input );
					DebugRecognitionException(eee4);
					throw eee4;
				}
				cnt4++;
			}
			loop4:
				;

			} finally { DebugExitSubRule(4); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("skip", 3);
			LeaveRule("skip", 3);
			LeaveRule_skip();
		}
		DebugLocation(39, 13);
		} finally { DebugExitRule(GrammarFileName, "skip"); }
		return retval;

	}
	// $ANTLR end "skip"

	partial void EnterRule_top();
	partial void LeaveRule_top();
	// $ANTLR start "top"
	// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:41:1: top : TOP ^ ( INT )+ ;
	[GrammarRule("top")]
	private AstParserRuleReturnScope<object, IToken> top()
	{
		EnterRule_top();
		EnterRule("top", 4);
		TraceIn("top", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken TOP14 = default(IToken);
		IToken INT15 = default(IToken);

		object TOP14_tree = default(object);
		object INT15_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "top");
		DebugLocation(41, 12);
		try
		{
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:42:2: ( TOP ^ ( INT )+ )
			DebugEnterAlt(1);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:42:4: TOP ^ ( INT )+
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(42, 7);
			TOP14=(IToken)Match(input,TOP,Follow._TOP_in_top148); 
			TOP14_tree = (object)adaptor.Create(TOP14);
			root_0 = (object)adaptor.BecomeRoot(TOP14_tree, root_0);
			DebugLocation(42, 9);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:42:9: ( INT )+
			int cnt5=0;
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_1 = input.LA(1);

				if ((LA5_1==INT))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch (alt5)
				{
				case 1:
					DebugEnterAlt(1);
					// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:42:9: INT
					{
					DebugLocation(42, 9);
					INT15=(IToken)Match(input,INT,Follow._INT_in_top151); 
					INT15_tree = (object)adaptor.Create(INT15);
					adaptor.AddChild(root_0, INT15_tree);

					}
					break;

				default:
					if (cnt5 >= 1)
						goto loop5;

					EarlyExitException eee5 = new EarlyExitException( 5, input );
					DebugRecognitionException(eee5);
					throw eee5;
				}
				cnt5++;
			}
			loop5:
				;

			} finally { DebugExitSubRule(5); }


			}

			retval.Stop = (IToken)input.LT(-1);

			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);

		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("top", 4);
			LeaveRule("top", 4);
			LeaveRule_top();
		}
		DebugLocation(42, 12);
		} finally { DebugExitRule(GrammarFileName, "top"); }
		return retval;

	}
	// $ANTLR end "top"

	partial void EnterRule_filter();
	partial void LeaveRule_filter();
	// $ANTLR start "filter"
	// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:44:1: filter : FILTER ^ filterexpression[false] ;
	[GrammarRule("filter")]
	private AstParserRuleReturnScope<object, IToken> filter()
	{
		EnterRule_filter();
		EnterRule("filter", 5);
		TraceIn("filter", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken FILTER16 = default(IToken);
		AstParserRuleReturnScope<object, IToken> filterexpression17 = default(AstParserRuleReturnScope<object, IToken>);

		object FILTER16_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "filter");
		DebugLocation(44, 34);
		try
		{
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:45:2: ( FILTER ^ filterexpression[false] )
			DebugEnterAlt(1);
			// E:\\Source\\Git\\LinqToQuerystring\\LinqToQuerystring\\LinqToQuerystring.g:45:4: FILTER ^ filterexpression[false]
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(45, 10);
			FILTER16=(IToken)Match(input,FILTER,Follow._FILTER_in_filter162); 
			FILTER16_tree = (object)adaptor.Create(FILTER16);
			root_0 = (object)adaptor.BecomeRoot(FILTER16_tree, root_0);
			DebugLocation(45, 12);
			PushFollow(Follow._filterexpression_in_filter165);
			filterexpression17=filterexpression(false);
			PopFollow();

			adaptor.AddChild(root_0, filterexpression17.Tree);

			}

			retval.Stop = (IToken)input.LT(-1);
